# aside

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  aside.py  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml  version-bump.yml
bundle/: Info.plist
notes/: Cargo.toml
notes/src/: main.rs
record/: Cargo.toml
record/src/: main.rs
skills/aside/: SKILL.md
skills/aside/scripts/: aside.py
skills/aside/templates/: 1on1-idea-exchange.md  discovery-call.md  group-conversation.md
src/: app.rs  lib.rs  main.rs  parser.rs  publish.rs  recorder.rs  session.rs  text_helpers.rs  tui.rs
