[package]
name = "aside"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossterm = "0.28"
dasp = "0.11"
hound = "3.5"
rtrb = "0.3"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.14", features = ["av"] }
