[package]
name = "aside"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossterm = "0.28"
dasp = "0.11"
hound = "3.5"
rtrb = "0.3"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.14", features = ["av"] }
